[package]
name = "trenino"
version = "0.1.0"
authors = ["Kyryh <71778401+Kyryh@users.noreply.github.com>"]
edition = "2021"

[dependencies]
const_base = "0.2.0"
dioxus = { version = "0.6.0", features = [] }
reqwest = "0.12.22"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
